fix: updated semantic checks